# akantu2

./: .arcconfig  .arclint  .clang-format  .clang-tidy  .codeclimate.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Makefile  README  README.md  VERSION  dev-requirements.txt  get_revision.sh  pyproject.toml  setup.cfg  setup.py
doc/: CMakeLists.txt  uml.dia
doc/coding_convention/: README
doc/dev-doc/: CMakeLists.txt  akantu.dox.j2  changelog.md  changelog.rst  conf.py  examples.rst  index.rst  reference.rst  requirements.txt  tutorials.rst
doc/doxygen/: CMakeLists.txt  akantu.dox.cmake  akantu.dox.in
doc/manual/: CMakeLists.txt  Makefile  biblio.bib  bibtex.bib  manual-appendix-elements.tex  manual-appendix-materials-cohesive.tex  manual-appendix-materials.tex  manual-backmatter.tex  manual-bibliography.bib  manual-changelog.tex  manual-cohesive_element.tex  manual-cohesive_elements.tex  manual-cohesive_elements_insertion.tex  manual-cohesive_laws.tex  manual-constitutive-laws.tex  manual-contact.tex  manual-contact_detector.tex  manual-elements.tex  manual-extra_materials.tex  manual-feengine.tex  manual-gettingstarted.tex  manual-heattransfermodel.tex  manual-introduction.tex  manual-io.tex  manual-lumping.tex  manual-macros.sty  manual-parallel.tex  manual-planning.tex  manual-solidmechanicsmodel.tex  manual-structuralmechanicsmodel-elements.tex  manual-structuralmechanicsmodel.tex  manual-titlepages.tex  manual.cls  manual.sty  manual.tex
src/: CMakeLists.txt
src/analysis/: analysis.cc  analysis.hh
src/common/: aka_array.cc  aka_array.hh  aka_array_filter.hh  aka_array_printer.hh  aka_array_tmpl.hh  aka_ball.cc  aka_ball.hh  aka_bbox.hh  aka_blas_lapack.hh  aka_bounding_box.cc  aka_bounding_box.hh  aka_ci_string.hh  aka_circular_array.hh  aka_circular_array_inline_impl.cc  aka_circular_array_inline_impl.hh  aka_circular_vector.hh  aka_circular_vector_inline_impl.cc  aka_common.cc  aka_common.hh  aka_common_inline_impl.cc  aka_common_inline_impl.hh  aka_config.cc.in  aka_config.hh.in  aka_constexpr_map.hh  aka_csr.hh  aka_debug_tools.hh  aka_element_classes_info.hh  aka_element_classes_info.hh.in  aka_element_classes_info_inline_impl.hh  aka_enum_macros.hh  aka_error.cc  aka_error.hh  aka_event_handler.hh  aka_event_handler_manager.hh  aka_extern.cc  aka_factory.hh  aka_fwd.hh  aka_geometry.cc  aka_geometry.hh  aka_grid.hh  (+42 more)
src/contact/: contact_common.hh  contact_impl.cc  contact_impl.hh  contact_manager.hh  discretization.cc  discretization.hh  element.cc  element.hh  friction.cc  friction.hh  resolution.cc  resolution.hh  scheme.cc  scheme.hh  search.cc  search.hh  surface.cc  surface.hh  zone.cc  zone.hh
src/fe_engine/: cohesive_element.cc  cohesive_element.hh  element.hh  element_class.hh  element_class_helper.hh  element_class_structural.hh  element_class_tmpl.hh  element_type_conversion.hh  fe_engine.cc  fe_engine.hh  fe_engine_inline_impl.hh  fe_engine_template.hh  fe_engine_template_cohesive.cc  fe_engine_template_tmpl.hh  fe_engine_template_tmpl_field.hh  fe_engine_template_tmpl_struct.hh  gauss_integration.cc  gauss_integration_tmpl.hh  geometrical_data_tmpl.hh  geometrical_element_property.cc  geometrical_element_property.hh  integration_element.cc  integration_point.hh  integrator.hh  integrator_gauss.hh  integrator_gauss_inline_impl.cc  integrator_gauss_inline_impl.hh  interpolation_element.cc  interpolation_element_tmpl.hh  shape_cohesive.hh  shape_cohesive_inline_impl.cc  shape_cohesive_inline_impl.hh  shape_functions.cc  shape_functions.hh  shape_functions_inline_impl.cc  shape_functions_inline_impl.hh  shape_lagrange.cc  shape_lagrange.hh  shape_lagrange_base.cc  shape_lagrange_base.hh  (+8 more)
src/fem/: boundary.cc  boundary.hh  boundary_inline_impl.cc  by_element_type.hh  by_element_type_tmpl.hh  cohesive_element.cc  cohesive_element.hh  element_class.cc  element_class.hh  element_class_igfem.hh  element_class_inline_impl.cc  element_class_structural.hh  element_class_tmpl.hh  element_group.cc  element_group.hh  element_group_inline_impl.cc  fe_engine.cc  fe_engine_inline_impl.cc  fe_engine_template.hh  fe_engine_template_cohesive.cc  fe_engine_template_tmpl.hh  fem.cc  fem.hh  fem_inline_impl.cc  fem_template.cc  fem_template.hh  fem_template_cohesive.cc  fem_template_cohesive_inline_impl.cc  fem_template_cohesive_tmpl.hh  fem_template_inline_impl.cc  fem_template_tmpl.hh  geometrical_data_tmpl.hh  geometrical_element.cc  group_manager.cc  group_manager.hh  group_manager_inline_impl.cc  igfem_element.hh  integration_element.cc  integrator.hh  integrator_cohesive.hh  (+31 more)
src/geometry/: geom_helper_functions.hh  mesh_abstract_intersector.hh  mesh_abstract_intersector_tmpl.hh  mesh_geom_abstract.hh  mesh_geom_common.hh  mesh_geom_factory.hh  mesh_geom_factory_tmpl.hh  mesh_geom_intersector.hh  mesh_geom_intersector_tmpl.hh  mesh_segment_intersector.hh  mesh_segment_intersector_tmpl.hh  mesh_sphere_intersector.hh  mesh_sphere_intersector_tmpl.hh  tree_type_helper.hh
src/io/: aka_abaqus_parser.hh  mesh_io.cc  mesh_io.hh  model_io.cc  model_io.hh
src/mesh/: #mesh.hh#  element_group.cc  element_group.hh  element_group_inline_impl.cc  element_group_inline_impl.hh  element_type_map.cc  element_type_map.hh  element_type_map_filter.hh  element_type_map_tmpl.hh  group_manager.cc  group_manager.hh  group_manager_inline_impl.cc  group_manager_inline_impl.hh  mesh.cc  mesh.hh  mesh_accessor.hh  mesh_data.cc  mesh_data.hh  mesh_data_tmpl.hh  mesh_events.hh  mesh_filter.hh  mesh_global_data_updater.hh  (+8 more)
test/: CMakeLists.txt  bar_traction.cc  cube.geo  cube.msh  fem.cc  line.msh  mesh_io_msh.cc  static_memory.cc  test_facet_extraction_tetra1.cc  test_facet_extraction_triangle1.cc  test_fem.cc  test_gtest_main.cc  test_gtest_utils.hh  test_solid_mechanics_model.cc  test_solid_mechanics_model_bar_traction2d.cc  test_solid_mechanics_model_cube3d.cc  test_static_memory.cc  test_static_memory.cpp  triangle.geo  triangle.msh  vector.cc
(+2637 files in other folders)
